--- a/css/style.css
+++ b/css/style.css
@@ -4,24 +4,18 @@
     grid-gap: 20px;
 }
 
-
-
 .grid-item {
-    background-color: black;
-    color: white;
+    background-color: hsl(0, 0%, 0%);
+    color: hsl(0, 0%, 100%);
     padding: 20px;
-    font-family: 'Pacifico',
-        cursive;
-    font-family: 'Space Grotesk',
-        sans-serif;
+    font-family: 'Pacifico', cursive;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 h2 {
     margin-bottom: 10px;
-    font-family: 'Pacifico',
-        cursive;
-    font-family: 'Space Grotesk',
-        sans-serif;
+    font-family: 'Pacifico', cursive;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 img {
@@ -29,31 +23,9 @@ img {
     height: auto;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-nav li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-nav li a {
-    color: #fff;
-    text-decoration: none;
-}
-
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: hsl(210, 86%, 45%);
+    color: hsl(236, 82%, 46%);
     padding: 20px;
     text-align: center;
 }
